# ai-underwriting

./: .dockerignore  .gitignore  Jenkinsfile  README.md  pyproject.toml
.github/workflows/: prod-deploy.yml
config/: gunicorn_config.py
config/dev/: config.yaml
config/nginx/: nginx-local.conf  nginx.conf
config/nginx/ssl/: nginx-selfsigned.crt  nginx-selfsigned.key
config/prod/: config.yaml
config/qa/: config.yaml
data/: mock_data.json
docker/: Dockerfile.dev  Dockerfile.prod  Dockerfile.test  docker-compose-local.yml  docker-compose-prod.yml
docs/: design.md
src/: app.py  logger.py  loguru_logger.py  pytest.ini
src/ai_agent/: model.py  synthetic_data_generator.py  utils.py
src/api/: routes.py
src/tests/: conftest.py  synthetic_data.py
src/tests/api/functional/auto_tests/: test_auto_test.py
src/tests/api/functional/integration/: test_integration.py
src/tests/api/functional/system/: test_system.py
src/tests/api/functional/unit/: test_agent.py  test_api.py
src/tests/api/non-functional/fairness/: test_fairness.py
src/tests/api/non-functional/performance/: locustfile.py  test_performance.py
src/tests/api/non-functional/security/: test_security.py
